--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -32,7 +32,7 @@ a{
     text-decoration: none;
 }
 a:hover{
-    color: var(--green);
+    color: var(--green) !important;
 }
 .h2, h2{
     font-size: 2.61rem !important;
@@ -83,6 +83,10 @@ button{
     width: 100% !important;
     padding: 5px !important;
     margin-top: 5px !important;
+    color: var(--green) !important;
+}
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+    border-color: white !important;
     color: var(--green) !important;
 }
 
