Header and minimal changes

--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -78,3 +78,13 @@ iframe{
     overflow:hidden;
     background:none!important;
 }
+.contact-heading a:hover{
+    color: var(--dark-gray);
+}
+.contact a.backlink{
+  color: var(--dark-gray);
+  text-decoration: none;
+}
+.contact a.backlink:hover{
+  color: var(--dark-gray);
+}
