--- a/src/pages/shop.css
+++ b/src/pages/shop.css
@@ -96,3 +96,105 @@
     }
 }
 
+
+/* Range Slider  */
+input[type=range] {
+    height: 24px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #002200;
+    background: #519D42;
+    border-radius: 5px;
+    border: 1px solid #18D501;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 5px #00AA00;
+    border: 0px solid #FFFFFF;
+    height: 18px;
+    width: 18px;
+    border-radius: 15px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -5.5px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #519D42;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #002200;
+    background: #519D42;
+    border-radius: 5px;
+    border: 1px solid #18D501;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 5px #00AA00;
+    border: 0px solid #FFFFFF;
+    height: 18px;
+    width: 18px;
+    border-radius: 15px;
+    background: #FFFFFF;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #519D42;
+    border: 1px solid #18D501;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px #002200;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #519D42;
+    border: 1px solid #18D501;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px #002200;
+  }
+  input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 5px #00AA00;
+    border: 0px solid #FFFFFF;
+    height: 18px;
+    width: 18px;
+    border-radius: 15px;
+    background: #FFFFFF;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #519D42;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #519D42;
+  }
+select#sarees{
+  border: 1px solid #dddddd !important;
+}
+
+
+
+
+
+
+
+
