--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -24,14 +24,14 @@
     width: 143% !important;
   } */
 
-.email-lbl,.pass-lbl
+/* .email-lbl,.pass-lbl
 {
 margin: 0rem 2.7rem !important;
  font-family: 'Source Sans Pro';
 font-size: 12px;
 color: #4B5563;
 
-}
+} */
 
 .modal-header{
     border-bottom: none !important;
@@ -58,10 +58,10 @@ color: #4B5563;
 }
 
 
-input[type=password],input[type=email]{
+/* input[type=password],input[type=email]{
     border: 1px solid #519D42;
     border-radius: 3px;
-}
+} */
 .frm-container{
     display: flex;
     flex-direction: column;
