--- a/src/pages/account.css
+++ b/src/pages/account.css
@@ -68,6 +68,7 @@
     border: 1px solid  #B2B2B2;;
     padding: 2rem;
     border-radius: 3px;
+    margin-bottom: 20px;
 }
 .address-container>a{
     color: #519D42;
