--- a/src/pages/checkout.css
+++ b/src/pages/checkout.css
@@ -25,20 +25,16 @@ font-style: normal;
 font-size: 12px;
 color: #4B5563;
 }
-.billing-part{
-    float: left;
-    /* width: 70%; */
-    /* background-color: rgb(212, 218, 208); */
-}
-.order-part{
+
+/* .order-part{
     background-color:#FAFAFA;
-    width: 62%;
+   
     padding: 1rem;
     float: right;
-}
+} */
 .checkout-btn{
     border-radius: 3px;
-    width: 35%;
+    width: 100%;
     text-decoration: none;
     border: none;
     background: #519D42;
@@ -52,51 +48,116 @@ margin: 0rem 3rem;
 font-size: 12px;
 }
 .h5{
-margin:0rem 3rem
+margin:0rem 3rem;
 }
+.check{
+    margin: 1rem 1rem 1rem 0.5rem;
+    font-size: 14px;
+}
+/* .in-bag .product, .in-bag .total-price{
+    border: 1px solid black;
+} */
 
 
 /* ---------------------  Add Address  Form  ----------------- */
-.Add-address{
-    padding: 2px;
-    /* width: 150%; */
+.checkoutadd-form .half-width{
+    width: 43%;
+    
+}
+/* .billing-address{
+    height: 500px;
+} */
+.order{
+    position: relative;
+    height: 500px;
+
+}
+.checkoutadd-form .formStyle{
+    border: none;
+    margin: 0 1rem;
+    padding-left: 5px;
+    border-bottom: 1px solid #E5E7EB;
+}
+.checkoutadd-form .fullWidth{
+    width: 94.6%;
+}
+.checkoutadd-form .submit{
+    border: 1px solid #1F2937;
+    border-radius: 2px;
+    padding: 7px 30px;
+}
+
+.shipping-link{
+    text-align: right;
+}
+.shipping-link button {
+    border: 0;
+    background-color: white;
+    color: #519D42;
+}
+
+/* *******Bag Value***** */
+.in-bag .product{
+    border: 1px solid var(--gray);
+}
+.bags .quantity-price{
+    text-align: end;
+    position: relative;
+}
+.bags .prod-total-price{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.final-bill{
+    position: absolute;
+    width: 91%;
+    bottom: 1rem;
+}
+.bags .final-bill button.btn.btn-primary {
+    width: 100%;
 }
 
 
-.modal-header{
-    border-bottom: none !important;
-      font-family: 'Source Sans Pro';
+/* Scrool Bar  */
+.bags .product {
+    height: 47rem;
+    overflow: auto;
+}
+/* width */
+/* .bags .product .row::-webkit-scrollbar {
+} */
+
+/* Track */
+.bags .product .row::-webkit-scrollbar-track {
+    background: #f1f1f1; 
 }
 
-.submit-btn{
-    background-color:white;
-    width: 32% !important;
-    border: 2px solid#1F2937;
-;
-    height: 38px;
-    border-radius: 6px;
-    color: #1F2937;
-   margin: 2rem 0rem 1rem;
-}                       
-.contactNumber,.country,.streetAdress,.additionalCommit{
-    /* margin: rem 2rem 1rem; */
-    height: 34px;
-    width: 82% !important;
-    padding: 14px;
-    font-size: 14px;
-      font-family: 'Source Sans Pro';
-
-}
-.f-name,.l-name,.state,.town,.landMark,.pinCode{
-    margin: 0rem 0.27rem 1.5rem;
-    height: 34px;
-   width: 39.5%;
-   color: #4B5563;
-   font-family: 'Source Sans Pro';
-    padding: 14px;
-    font-size: 14px;
+/* Handle */
+.bags .product .row::-webkit-scrollbar-thumb {
+    background: #888; 
 }
 
+/* Handle on hover */
+.bags .product .row::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
+
+
+
+
+
+
+
+
+
+
+.success{
+    /* color: #519D42; */
+    background-color: #519D42;
+}
 /* input[type=text],input[type=password],input[type=email],input[type=number],input[type=tel],[textarea]:hover {
     border: 1px solid #519D42;
 } */
@@ -128,4 +189,23 @@ margin:0rem 3rem
     color: #1D4ED8 !important;
     border: 1px solid !important;
     font-weight: bold;
+  }
+  .pay-opt{
+width: 400px;
+height: 49px;
+background: #FFFFFF;
+border: 1px solid #D1D5DB;
+border-radius: 4px;
+  }
+  .pay-opt:hover{
+    color: #1D4ED8;
+    border: 1px solid #1D4ED8;
+  }
+  .payment{
+    text-align: center;
+    padding: 10rem;
+  }
+
+  .order{
+    background-color: var(--gray);
   }
