--- a/src/pages/checkout.css
+++ b/src/pages/checkout.css
@@ -67,7 +67,7 @@ margin:0rem 3rem;
 /* .billing-address{
     height: 500px;
 } */
-.order{
+.checkout1-section .order{
     position: relative;
     height: 500px;
 
@@ -206,6 +206,6 @@ border-radius: 4px;
     padding: 10rem;
   }
 
-  .order{
+  .checkout1-section .order{
     background-color: var(--gray);
   }
