--- a/src/pages/checkout.css
+++ b/src/pages/checkout.css
@@ -43,10 +43,10 @@ color: #4B5563;
      font-style: normal;
     font-size: 18px;
 }
-.head{
+/* .head{
 margin: 0rem 3rem;
 font-size: 12px;
-}
+} */
 .h5{
 margin:0rem 3rem;
 }
@@ -61,13 +61,13 @@ margin:0rem 3rem;
 
 /* ---------------------  Add Address  Form  ----------------- */
 .checkoutadd-form .half-width{
-    width: 43%;
+    width: 45.4%;
     
 }
 /* .billing-address{
     height: 500px;
 } */
-.checkout1-section .order{
+.order{
     position: relative;
     height: 500px;
 
@@ -206,6 +206,6 @@ border-radius: 4px;
     padding: 10rem;
   }
 
-  .checkout1-section .order{
+  .order{
     background-color: var(--gray);
   }
