--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -650,12 +650,42 @@ input[type=text].search{
     padding: 12px 36px 12px 12px;
     box-sizing: border-box;
   }
+  .email-lbl,.pass-lbl
+{
+margin: 0rem 2.7rem !important;
+ font-family: 'Source Sans Pro';
+font-size: 12px;
+color: #4B5563;
+
+}
   .password-icon{
     position:absolute;
     top: 42%;
     right: 20%;
     cursor: pointer;
   }
+  .error-msg{
+    font-size: 12px;
+    margin: -1rem 0rem 0rem -16rem;
+    color: red;
+  }
+  .forgot-pass-link>a{
+    color:#4B5563 !important;
+    background-color: transparent !important;
+    text-decoration: none !important ;
+    margin: 0rem 0rem 0rem 16rem;
+    font-size: 12px;
+   
+  }
+  .log-in-frm input[type=password]:focus, .log-in-frm input[type=email]:focus{
+    /* border: 1px solid  !important; */
+    border-radius: 2px !important; 
+    outline:  2px solid#519D42 ;
+    border: none;
+  }
+  /* input[type=text]:focus,input[type=password]:focus,input[type=email]:focus,input[type=number]:focus,input[type=tel]:focus,[textarea]:focus{ */
+
+  
   
 
 .modal-header{
@@ -691,14 +721,7 @@ input[type=text].search{
     display: flex;
     flex-direction: column;
 }
-.forgot-pass-link>a{
-    color:#4B5563 !important;
-    background-color: transparent !important;
-    text-decoration: none !important ;
-    margin: 0rem 0rem 0rem -16rem;
-    font-size: 12px;
-   
-  }
+
 
 .login-link>a{
     color:  #519D42 !important;
@@ -725,15 +748,9 @@ font-size: 13px !important;
 }
 
 /* --------------------  SignUp -------------------- */
-.show-popup{
-background-color: #519D42;
-    width: 50%;
-    border: none;
-    height: 38px;
-    border-radius: 6px;
-    color: white;
-    margin: 2rem 0rem;
-}
+.frm-con .head{
+    margin: 0rem 2.5rem;
+  }
 
 .modal-header{
     border-bottom: none !important;
@@ -769,12 +786,12 @@ background-color: #519D42;
 .serch-bar {
     background-color: var(--gray);
 }
+.signup-frm input[type=text]:focus, .signup-frm input[type=password]:focus, .signup-frm input[type=email]:focus, .signup-frm input[type=number]:focus, .signup-frm input[type=tel]:focus,[textarea]:focus{
+    border-radius: 2px !important; 
+    outline:  2px solid#519D42 ;
+    border: none;
+}
 
-/* #header input[type=text],input[type=password],input[type=email],input[type=number],input[type=tel],[textarea]:hover {
-    border: 0;
-    border-radius: 0;
-    background-color: white;
-} */
 .frm-container{
     display: flex;
     flex-direction: column;
@@ -822,4 +839,10 @@ background-color: #519D42;
 }
 .md-body>p{
     margin-top: 3rem;
+}
+/* ************   forgot passs****** */
+.forgot-pass  input[type=text]:focus, .forgot-pass input[type=password]:focus, .forgot-pass input[type=email]:focus, .forgot-pass input[type=number]:focus, .forgot-pass input[type=tel]:focus,[textarea]:focus{
+    border-radius: 2px !important; 
+    outline:  2px solid#519D42 ;
+    border: none;
 }
